<?xml version="1.0"?>
<package>
  <name>pal_2dnav</name>
  <description>Meta-package containing some Navigation code for REEM</description>
  <version>0.1.0</version>
  <maintainer email="siegfried.gevatter@pal-robotics.com">Siegfried-A. Gevatter Pujals</maintainer>
  <author>Siegfried-A. Gevatter Pujals</author>
  <license>ISC License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pal_exploration</run_depend>
  <run_depend>pal_nav_utils</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
